--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.9.0",
+    "@types/redis": "^4.0.10",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "redis": "^4.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
