--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "flutterwave-node-v3": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "redis": "^4.7.0",
